# yamerge

./: .pre-commit-config.yaml  README.md  index.html  pyproject.toml  search.js  yamerge.html
src/yamerge/: core.py  main.py  yaml_access.py
src/yamerge/engine/: __init__.py  core.py
src/yamerge/transformers/: __init__.py  merge.py  rename_tag.py
tests/test_yamerge/: test_engine.py  test_transformers.py
tests_data/: file_1.yml  file_2.yml  merge_order_1.yml  merge_order_2.yml  merge_order_3.yml  some_file.yml  some_snippet.yml
yamerge/: core.html  engine.html  main.html  transformers.html  yaml_access.html
yamerge/engine/: core.html
yamerge/transformers/: merge.html  rename_tag.html
