[tool.poetry]
name = "yamerge"
version = "0.1.0"
description = "YAML file preprocessor."
authors = ["Florian Rupprecht <florian.rupprecht@childmind.org>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "yamerge", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
ruamel-yaml = "^0.17.32"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
mypy = "^1.4.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.0.0"

[tool.poetry.extras]
docs = ["pdoc"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.scripts]
yamerge = "yamerge.main:main"
