[tool.poetry]
name = "yamerge"
version = "0.1.0"
description = "YAML file preprocessor."
authors = ["Florian Rupprecht <florian.rupprecht@childmind.org>"]
license = "LGPL-2.1"
readme = "README.md"

[[tool.poetry.packages]]
include = "yamerge"
from = "src"

[tool.poetry.dependencies]
python = "^3.10"
ruamel-yaml = "^0.18.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.4.0"

[tool.poetry.extras]
docs = ["pdoc"]

[tool.poetry.scripts]
yamerge = "yamerge.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = ["ANN101", "ANN102"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
